RESOLVED FIXED186597
CSS "background-color" style no longer affects natively rendered text fields
https://bugs.webkit.org/show_bug.cgi?id=186597
Summary CSS "background-color" style no longer affects natively rendered text fields
Wenson Hsieh
Reported 2018-06-13 10:30:09 PDT
Attachments
Patch (4.68 KB, patch)
2018-06-13 10:50 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-06-13 10:30:46 PDT
This was caught by a failing test on macOS Mojave: fast/forms/hidpi-textfield-background-bleeding.html.
Wenson Hsieh
Comment 2 2018-06-13 10:50:48 PDT
WebKit Commit Bot
Comment 3 2018-06-13 11:51:24 PDT
Comment on attachment 342675 [details] Patch Clearing flags on attachment: 342675 Committed r232799: <https://trac.webkit.org/changeset/232799>
WebKit Commit Bot
Comment 4 2018-06-13 11:51:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.